<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <Button
            android:id="@+id/makeVisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hacer_visible"/>
        <Button
            android:id="@+id/searchDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_dispositivos"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dispositivos_descubiertos_toque_para_conectar" />
        <ListView
            android:id="@+id/devicesList"
            android:layout_width="match_parent"
            android:layout_height="200sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/poner_el_mensaje_aqui" />
        <Button
            android:id="@+id/sendMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mandar"/>
        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mensaje_para_enviar_al_dispositivo_seleccionado"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Mensaje recibido"/>
        <TextView
            android:id="@+id/recivedData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>